Bug 454549 - Deleted panels still respond to keyboard shortcuts until their "undo deleting this panel" notification is closed
Summary: Deleted panels still respond to keyboard shortcuts until their "undo deleting...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.24.90
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-29 05:44 UTC by Matej Starc
Modified: 2024-12-07 12:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
bug screenshot (2.98 MB, image/png)
2022-05-29 05:55 UTC, Matej Starc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matej Starc 2022-05-29 05:44:26 UTC
SUMMARY
Because of some problems (another bug report incoming) I had to delete both panels, and when I pressed my super key and noticed that the application launcher menu opened, even though I just delete the widget. 

STEPS TO REPRODUCE
1. Create a default panel
2. Set your keyboard shortcut
3. Delete the panel
4. Press the shortcut you assigned

OBSERVED RESULT
Application launcher menu can be shown even after widget is removed.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.4
Kernel Version: 5.17.9-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 12 × Intel® Core™ i7-8700 CPU @ 3.20GHz
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 480 Graphics
Comment 1 Matej Starc 2022-05-29 05:55:28 UTC
Created attachment 149302 [details]
bug screenshot
Comment 2 Nate Graham 2022-06-01 17:49:53 UTC
Did you close the notification that says "a panel was deleted" or is it still visible somewhere?
Comment 3 Matej Starc 2022-06-04 07:22:16 UTC
(In reply to Nate Graham from comment #2)
> Did you close the notification that says "a panel was deleted" or is it
> still visible somewhere?

Ah. So it seems that until that notification ceases to be valid or is closed, the app launcher can still be used.
Comment 4 Nate Graham 2022-06-05 22:35:15 UTC
Yes, until you close the notification, the panel is just hidden, not actually deleted. That's so you can undo deleting it using the notification.

We could probably block keyboard shortcuts that affect it when it's in this state.
Comment 5 Matej Starc 2022-06-08 08:50:17 UTC
(In reply to Nate Graham from comment #4)
> Yes, until you close the notification, the panel is just hidden, not
> actually deleted. That's so you can undo deleting it using the notification.
> 
> We could probably block keyboard shortcuts that affect it when it's in this
> state.

Blocking shortcuts would be a good idea.
Thanks.
Comment 6 Bug Janitor Service 2024-12-05 16:28:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4982
Comment 7 Niccolò Venerandi 2024-12-05 17:34:24 UTC
Git commit 83a995f98af380c53c2b5dddcb210e837a24b5c3 by Niccolò Venerandi.
Committed on 05/12/2024 at 16:43.
Pushed by niccolove into branch 'master'.

Delete PanelView immediately after user asks to delete panel

We used to only hide the PanelView until as long as the "undo"
notification was alive, but this allows the user to still interact
with the applets through shortcuts. Instead, we immediately delete
the PanelView, and we create it again if the user undoes the action.

M  +11   -1    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/83a995f98af380c53c2b5dddcb210e837a24b5c3