Delete PanelView immediately after user asks to delete panel

We used to only hide the PanelView until as long as the "undo"
notification was alive, but this allows the user to still interact
with the applets through shortcuts. Instead, we immediately delete
the PanelView, and we create it again if the user undoes the action.

BUG:454549